# lab2-solutions

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
.github/classroom/: autograding.json
.github/workflows/: build_and_test.sh
src/: exercises.c  exercises.h  main.c
tests/: CMakeLists.txt  check_ex1.cpp  check_ex2.cpp  check_ex3.cpp  check_ex4_5.cpp  check_ex6.cpp  compare_files.cpp  compare_files.hpp  test_ex1.c  test_ex2.c  test_ex3.c  test_ex4.c  test_ex5.c  test_ex6.c
tests/IO/: empty_output.txt  ex4_5_output.txt  multiple_line_output.txt  number_summer_input3.txt  number_summer_input4.txt  number_summer_output2.txt  number_summer_output3.txt  number_summer_output4.txt  one_line_output.txt  spaces_and_tabs_input.txt  spaces_and_tabs_output.txt
